correction de l'alignement du body

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -1,3 +1,6 @@
+body {
+    text-align: left;
+}
 html{
     overflow-x: hidden !important;
 }
